# tiff2mp4

./: .gitignore  README.md  environment.yml  pyproject.toml
scripts/: Setup-Windows.ps1
tests/: test_intensity.py  test_movie.py
tiff2mp4/: __init__.py  __main__.py  app.py  cli.py  movie.py
